# Tri-2-Quad-Mesh

./: .gitignore  CMakeLists.txt  README.md  make.sh
.github/workflows/: continuous.yml  out_for_now
animation/: animation.lua
mesh/: M4.mesh  S22.mesh  S9.mesh  catorus.geogram  piece.geogram  quarterdisk_tri.mesh  tri_mesh.geogram
src/: CMakeLists.txt  borderOrientation.cpp  border_orientation.cpp  entrypoint.cpp  helloworld.cpp  helpers.h  intersectData.cpp  keyHelper.cpp  region.cpp  region.h  regionGenerator.cpp  triToQuadRegion.cpp  triToQuadSimple.cpp
src/region_generator/: dijkstra.cpp  poisson_disk_sampling.cpp
src/utils/: cleanDirection.h  geometrical_cleaning.h  hardEdge.h  helpers.h  keyHelper.cpp  keyHelper.h  normalCalculator.h  topological_cleaning.h
